#pragma once
class Image {
 public:
  virtual void draw() = 0;
};
